AUTOMAKE_OPTIONS=foreign
ACLOCAL_AMFLAGS = -I m4
MAINTAINERCLEANFILES = Makefile.in \
					   aclocal.m4 \
					   configure \
					   config.h.in \
					   config.sub \
					   config.guess \
					   ltmain.sh \
					   depcomp \
					   compile \
					   missing \
					   install-sh \
					   mkinstalldirs

SUBDIRS = tbox

